# MockServer

./: .gitignore  Cargo.toml  README.md
config/: endpoints.yaml
src/: main.rs
src/config/: loader.rs  mod.rs
src/middleware/: delay.rs  mod.rs
src/response/: faker.rs  generator.rs  mod.rs
src/router/: dynamic.rs
