[package]
name = "mockserver"
version = "0.1.0"
edition = "2021"
description = "A highly configurable mock server with dynamic endpoints, fake data, and custom validation"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Fake data generation
fake = { version = "2.9", features = ["derive"] }
rand = "0.8"
uuid = { version = "1", features = ["v4"] }

# Validation
jsonschema = "0.18"

# Utilities
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = { version = "6", features = ["macos_kqueue"] }
parking_lot = "0.12"
chrono = "0.4"
